--- a/app/src/main/res/layout/fragment_trangchu.xml
+++ b/app/src/main/res/layout/fragment_trangchu.xml
@@ -19,6 +19,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
+        <fragment
+            android:name="luongduongquan.com.musicapp.Fragment.Fragment_PlayList"
+            android:id="@+id/fragmentPlayList_trangchu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
 
 
     </LinearLayout>
