- Update layout and API Chu De va The Loai

--- a/app/src/main/res/layout/fragment_trangchu.xml
+++ b/app/src/main/res/layout/fragment_trangchu.xml
@@ -24,6 +24,11 @@
             android:id="@+id/fragmentPlayList_trangchu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
+        <fragment
+            android:name="luongduongquan.com.musicapp.Fragment.Fragment_ChudeTheLoai"
+            android:id="@+id/fragmentChudeTheloai_trangchu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
 
 
