- Update Search function

--- a/app/src/main/res/layout/fragment_timkiem.xml
+++ b/app/src/main/res/layout/fragment_timkiem.xml
@@ -1,13 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/darker_gray">
-    <TextView
+
+
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar_TimKiemFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Tim Kiem"
-        android:textSize="50sp"/>
+        android:background="#7398ff">
 
-</android.support.constraint.ConstraintLayout>
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolBar_TimKiemFragment"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize">
+        </android.support.v7.widget.Toolbar>
+    </android.support.design.widget.AppBarLayout>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView_TimKiemFragment"
+        android:layout_below="@id/appbar_TimKiemFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp">
+
+    </android.support.v7.widget.RecyclerView>
+
+    <TextView
+        android:id="@+id/tvEmpty_TimKiemFragment"
+        android:layout_below="@id/appbar_TimKiemFragment"
+        android:textSize="35sp"
+        android:text="Empty result"
+        android:gravity="center"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+</RelativeLayout>
